# downline

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  style.css  vite.config.js  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: main.yml
src/: App.vue  index.html  main.js  main.ts  store.ts  ytdl-old.js  ytdl.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: download_error.rs  main.rs  ytd_rs.rs
src/static/css/: app.css  downloadable.css  extras.css  fontawesome-solid.css  main-page.css  titlebar.css
