[package]
name = "app"
version = "3.0.0"
description = "A free, cross-platform desktop application for downloading video and audio"
authors = ["jarbun", "Stefnotch"]
license = "MIT"
repository = "https://github.com/stefnotch/downline"
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.4", features = ["dialog-open", "fs-path", "shell-execute", "shell-open"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
