[package]
name = "app"
version = "3.0.0"
description = "A free, cross-platform desktop application for downloading video and audio"
authors = ["jarbun", "Stefnotch"]
license = "MIT"
repository = "https://github.com/stefnotch/downline"
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = "1.0.0-beta.3"

[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
tauri = { version = "1.0.0-beta.5", features = ["dialog-open", "fs-path", "shell-execute", "shell-open"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
